--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -736,16 +736,19 @@
             </objects>
             <point key="canvasLocation" x="1418" y="-938"/>
         </scene>
-        <!--Note View Controller - Notes-->
+        <!--All Notes View Controller - Notes-->
         <scene sceneID="sft-KW-qw5">
             <objects>
-                <viewController id="1GJ-Uz-eL2" customClass="NoteViewController" sceneMemberID="viewController">
+                <viewController id="1GJ-Uz-eL2" customClass="AllNotesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WfL-Pm-VTy">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="8PX-xz-DNH">
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="504" id="Mhq-v8-q3o"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="4Ks-YZ-57I">
                                         <rect key="frame" x="0.0" y="46" width="320" height="46"/>
@@ -763,20 +766,63 @@
                         <constraints>
                             <constraint firstItem="8PX-xz-DNH" firstAttribute="top" secondItem="WfL-Pm-VTy" secondAttribute="top" type="default" id="0f5-Um-T34"/>
                             <constraint firstItem="8PX-xz-DNH" firstAttribute="trailing" secondItem="WfL-Pm-VTy" secondAttribute="trailing" type="default" id="CQo-aP-jKI"/>
-                            <constraint firstItem="8PX-xz-DNH" firstAttribute="bottom" secondItem="WfL-Pm-VTy" secondAttribute="bottom" type="default" id="ZsW-yf-967"/>
                             <constraint firstItem="8PX-xz-DNH" firstAttribute="leading" secondItem="WfL-Pm-VTy" secondAttribute="leading" type="default" id="qqv-3U-vCK"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Notes" id="PZS-hm-9Wb">
                         <barButtonItem key="backBarButtonItem" title="Back" id="gWo-SW-8rG"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="tF0-bV-ZyW">
+                            <connections>
+                                <segue destination="Djl-U9-qqq" kind="push" identifier="segue11" id="8D2-t9-Wb5"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <outlet property="tableNotes" destination="8PX-xz-DNH" id="Je3-V2-m4V"/>
-                    </connections>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hkr-Je-f6R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2004" y="-924"/>
+        </scene>
+        <!--Note View Controller-->
+        <scene sceneID="EMU-aK-NoZ">
+            <objects>
+                <viewController id="Djl-U9-qqq" customClass="NoteViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lXc-zi-VKq">
+                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJ5-4O-OME">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="234" id="4ns-k6-Ngl"/>
+                                    <constraint firstAttribute="width" constant="310" id="wTd-pT-C2A"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jJ5-4O-OME" firstAttribute="centerX" secondItem="lXc-zi-VKq" secondAttribute="centerX" type="default" id="Bbp-Ww-GoT"/>
+                            <constraint firstItem="jJ5-4O-OME" firstAttribute="top" secondItem="lXc-zi-VKq" secondAttribute="top" constant="28" id="Htj-Aw-16X"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Q4k-PV-2Rd">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="4hX-eg-EXJ">
+                            <connections>
+                                <action selector="addNote:" destination="Djl-U9-qqq" id="yR8-dg-09H"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="noteTextView" destination="jJ5-4O-OME" id="fmt-NQ-MJ4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TI6-Ei-FWB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2496" y="-924"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DqG-af-atm">
@@ -813,6 +859,9 @@
                 <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
             </relationships>
+        </class>
+        <class className="AllNotesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotesViewController.h"/>
         </class>
         <class className="AllNotificationViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotificationViewController.h"/>
@@ -871,7 +920,8 @@
         <class className="NoteViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NoteViewController.h"/>
             <relationships>
-                <relationship kind="outlet" name="tableNotes" candidateClass="UITableView"/>
+                <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="noteTextView" candidateClass="UITextView"/>
             </relationships>
         </class>
         <class className="NotificationViewController" superclassName="UIViewController">
