--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -807,7 +807,7 @@
                                     <constraint firstAttribute="width" constant="160" id="jQf-ph-qi3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                <state key="normal" title="About Person">
+                                <state key="normal" title="About person">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -835,11 +835,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="jJ5-4O-OME" firstAttribute="centerX" secondItem="lXc-zi-VKq" secondAttribute="centerX" type="default" id="1XN-Zc-Kb0"/>
-                            <constraint firstItem="Kpf-u1-KBg" firstAttribute="top" secondItem="lXc-zi-VKq" secondAttribute="top" type="default" id="3Wa-ai-FZR"/>
                             <constraint firstItem="jJ5-4O-OME" firstAttribute="top" secondItem="lXc-zi-VKq" secondAttribute="top" constant="48" id="8M0-4G-rp7"/>
                             <constraint firstItem="alV-vU-abq" firstAttribute="trailing" secondItem="lXc-zi-VKq" secondAttribute="trailing" type="default" id="Hoy-7t-h5R"/>
-                            <constraint firstItem="alV-vU-abq" firstAttribute="top" secondItem="lXc-zi-VKq" secondAttribute="top" type="default" id="fsW-JU-1ko"/>
                             <constraint firstItem="Kpf-u1-KBg" firstAttribute="leading" secondItem="lXc-zi-VKq" secondAttribute="leading" type="default" id="kyr-0m-OCD"/>
+                            <constraint firstItem="Kpf-u1-KBg" firstAttribute="top" secondItem="lXc-zi-VKq" secondAttribute="top" constant="-1" id="nwo-NS-Tcj"/>
+                            <constraint firstItem="Kpf-u1-KBg" firstAttribute="top" secondItem="alV-vU-abq" secondAttribute="top" type="default" id="rde-cj-TdN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Q4k-PV-2Rd">
@@ -850,6 +850,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="aboutPersonButton" destination="Kpf-u1-KBg" id="vtH-72-k99"/>
                         <outlet property="noteTextView" destination="jJ5-4O-OME" id="fmt-NQ-MJ4"/>
                     </connections>
                 </viewController>
@@ -885,6 +886,102 @@
         <image name="Schedule.jpg" width="50" height="50"/>
         <image name="maps.jpg" width="50" height="50"/>
     </resources>
+    <classes>
+        <class className="AllNetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="AllNotesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotesViewController.h"/>
+        </class>
+        <class className="AllNotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableNotifications" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CommunicationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommunicationViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="clearButton:" candidateClass="UIButton"/>
+                <relationship kind="action" name="feedbackOrMessageButton:" candidateClass="UISegmentedControl"/>
+                <relationship kind="action" name="sendButton:"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="feedback" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="EventUIViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventUIViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="HomeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="IConfsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IConfsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ImageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="NetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="networkingDescription" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="personName" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="personPhoto" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="NoteViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NoteViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="addPerson:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="aboutPersonButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="noteTextView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="NotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationText" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="PersonProfileViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="PersonalProgramTKCalendarDayViewController" superclassName="TKCalendarDayViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonalProgramTKCalendarDayViewController.h"/>
+        </class>
+        <class className="TKCalendarDayViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TKCalendarDayViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
